[gd_scene load_steps=3 format=3 uid="uid://c2a4w5i3igydd"]

[ext_resource type="Texture2D" uid="uid://cqqo5m8rdhbje" path="res://build_system/assets/icons/item_bg.png" id="1_usrwf"]
[ext_resource type="Script" path="res://build_system/GUI/GUI_item.gd" id="2_6r8tk"]

[node name="gui_item" type="TextureRect"]
texture = ExtResource("1_usrwf")
script = ExtResource("2_6r8tk")

[node name="icon" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 2

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
